--- a/member-search2.html
+++ b/member-search2.html
@@ -108,7 +108,7 @@
     <div class="result-item">
         <div class="head"></div>
         <div class="result">
-            <img src="/img/search-result.png" alt="" class="result-img">
+            <img src="img/search-result.png" alt="" class="result-img">
             <div class="wrap-con">
                 <div class="name">강수정</div>
                 <div class="more-detail">자세히 &gt;</div>
@@ -128,7 +128,7 @@
     <div class="result-item">
         <div class="head"></div>
         <div class="result">
-            <img src="/img/search-result.png" alt="" class="result-img">
+            <img src="img/search-result.png" alt="" class="result-img">
             <div class="wrap-con">
                 <div class="name">강수정</div>
                 <div class="more-detail">자세히 &gt;</div>
@@ -148,28 +148,7 @@
     <div class="result-item">
         <div class="head"></div>
         <div class="result">
-            <img src="/img/search-result.png" alt="" class="result-img">
-            <div class="wrap-con">
-                <div class="name">강수정</div>
-                <div class="more-detail">자세히 &gt;</div>
-                <span class="job">변호사</span>
-                <div class="tel">T. 02-6386-6213</div>
-                <div class="email">E. soojeong@leeko.com</div>
-                <div class="mainwork">
-                    <div class="work-title">주요업무분야</div>
-                    <div class="contents">
-                        지적재산권,오픈소스 SW, <br>
-                        지적재산권 소송, 형사, 엔터테인먼트
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="result-item">
-        <div class="head"></div>
-        <div class="result">
-            <img src="/img/search-result.png" alt="" class="result-img">
+            <img src="img/search-result.png" alt="" class="result-img">
             <div class="wrap-con">
                 <div class="name">강수정</div>
                 <div class="more-detail">자세히 &gt;</div>
@@ -190,7 +169,28 @@
     <div class="result-item">
         <div class="head"></div>
         <div class="result">
-            <img src="/img/search-result.png" alt="" class="result-img">
+            <img src="img/search-result.png" alt="" class="result-img">
+            <div class="wrap-con">
+                <div class="name">강수정</div>
+                <div class="more-detail">자세히 &gt;</div>
+                <span class="job">변호사</span>
+                <div class="tel">T. 02-6386-6213</div>
+                <div class="email">E. soojeong@leeko.com</div>
+                <div class="mainwork">
+                    <div class="work-title">주요업무분야</div>
+                    <div class="contents">
+                        지적재산권,오픈소스 SW, <br>
+                        지적재산권 소송, 형사, 엔터테인먼트
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="result-item">
+        <div class="head"></div>
+        <div class="result">
+            <img src="img/search-result.png" alt="" class="result-img">
             <div class="wrap-con">
                 <div class="name">강수정</div>
                 <div class="more-detail">자세히 &gt;</div>
