--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
     <title>광장 - 첫 페이지</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/libs/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/libs/bootstrap.min.css">
     <link rel="stylesheet" href="css/libs/jquery-ui.min.css">
@@ -36,7 +39,7 @@
         </a>
     </div>
     <a href="#">
-        <img src="img/logo-mobile.png" class="logo" alt="">
+        <img src="img/newlogo.png" class="logo" alt="">
     </a>
 
     <div class="right-searcharea">
