--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <ul>
                     <li class="active hidden-xs"><a href="#">HOME</a></li>
                     <li><a href="#">업무분야</a></li>
-                    <li><a href="#">구성원 소개</a></li>
+                    <li><a href="member-search.html">구성원 소개</a></li>
                     <li><a href="#">인재채용</a></li>
                     <li><a href="#">공익활동</a></li>
                     <li><a href="#">광장소개</a></li>
@@ -131,10 +131,10 @@
                 <div class="item">
                     <a href="#">업무분야</a>
                 </div>
-                <div class="item">
+                <!--<div class="item">
                     <a href="#">전체보기</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
-                </div>
+                </div>-->
                 <div class="item">
                     <a href="#">분야별</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -182,10 +182,10 @@
         <div class="item">
             <a href="#">업무분야</a>
         </div>
-        <div class="item">
+        <!--<div class="item">
             <a href="#">전체보기</a>
             <i class="fa fa-angle-right" aria-hidden="true"></i>
-        </div>
+        </div>-->
         <div class="item">
             <a href="#">분야별</a>
             <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -231,9 +231,7 @@
 
 
     <div class="head hidden-xs">
-        <div class="left">
-
-        </div>
+        <div class="left"></div>
         <div class="right">
             <h3>법무법인 광장 최근소식</h3>
             <h3>RECENT DEVELOPMENTS</h3>
