--- a/list.html
+++ b/list.html
@@ -10,6 +10,7 @@
 <a href="index.html" target="_blank">첫 페이지</a> <br> <br>
 <a href="member-search.html" target="_blank">구성원 검색 페이지</a> <br> <br>
 <a href="member-search2.html" target="_blank">구성원 검색 결과 페이지</a> <br> <br>
+<a href="member-detail.html" target="_blank">구성원 상세</a> <br> <br>
 
 
 </body>
