--- a/member-search.html
+++ b/member-search.html
@@ -19,8 +19,8 @@
 
 <body>
 
-<nav class="index">
-    <div class="wrap-narrow mobile">
+<nav class="index invisible-in-mobile">
+    <div class="wrap-narrow">
         <div class="menu-website">
             <ul class="menu">
                 <li class="active">법무법인 광장</li>
@@ -30,11 +30,25 @@
         </div>
     </div>
 </nav>
+<nav class="m-nav visible-in-mobile">
+    <div class="left-hamberger">
+        <a href="#none" class="">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+        </a>
+    </div>
+    <a href="#">
+        <img src="img/newlogo.png" class="logo" alt="">
+    </a>
+
+    <div class="right-searcharea">
+
+    </div>
+</nav>
 <div class="wrap-narrow">
     <div class="header detail">
         <nav class="left">
             <ul>
-                <li class="active"><a href="#">HOME</a></li>
+                <li class="active hidden-xs"><a href="#">HOME</a></li>
                 <li><a href="#">업무분야</a></li>
                 <li><a href="#">구성원 소개</a></li>
                 <li><a href="#">인재채용</a></li>
@@ -43,7 +57,7 @@
             </ul>
         </nav>
     </div>
-    <div class="wrap-search-area">
+    <div class="wrap-search-area hidden-xs">
         <div class="search-area">
             <div class="form-group search">
                 <input type="text" name="search"/>
@@ -67,7 +81,7 @@
 <div class="clearfix"></div>
 <div class="category-detail">
     <div class="wrap-narrow">
-        <span>HOME &gt; 구성원 &gt; </span><span class="current">구성원 검색</span>
+        <span>HOME &nbsp;&gt;&nbsp; 구성원 &nbsp;&gt;&nbsp; </span><span class="current">구성원 검색</span>
     </div>
 </div>
 
@@ -115,7 +129,9 @@
                         <input type="text" name="search-name" placeholder="ex) 홍길동"/>
                     </div>
                     <div class="form-group search-btn">
-                        <button type="button" class="btn-basic">검색</button>
+                        <a href="member-search2.html">
+                            <button type="button" class="btn-basic">검색</button>
+                        </a>
                     </div>
                 </div>
 
@@ -134,7 +150,7 @@
         <li><a href="#">사이트맵</a></li>
         <li><a href="#">뉴스레터 신청</a></li>
     </ul>
-    <p>
+    <p class="copyright">
         Copyright &copy; Lee&amp;Ko All Right Reserved
     </p>
 
